--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="main.css">
 	<title>¿Dormimos?</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1>¿Dormimos?</h1>
+				<h1 class="text-center">¿Dormimos?</h1>
 				<p>Completa el formulario y te diré si puedes hacerlo</p>
 				<hr>
 			</div>
@@ -37,13 +38,15 @@
 						<option value="2">No</option>
 					</select>
 				</div>
-				<button onclick="calcular()" class="btn btn-primary">Evaluar</button>
+				<button onclick="calcular()" class="btn btn-primary" class="text-center">Evaluar</button>
 			</div>
 			<div class="col-md-3 text-center">
 				<h4 class="text-info">Hoy</h4>
-				<div id="salida" style="font-size:50px;" class="text-center">-</div>
-				<h4 class="text-info">podrás dormir</h4>
-	</div>
+				<div id="salida" style="font-size:50px;" >-</div>
+				<h4 class="text-info">Podrás dormir</h4>
+	        </div>
+	    </div>
+    </div>
 </body>
 <script src="main.js"></script>
 </html>
