--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="main.css">
+	<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet">
 	<title>¿Dormimos?</title>
 </head>
 <body>
@@ -38,7 +39,7 @@
 						<option value="2">No</option>
 					</select>
 				</div>
-				<button onclick="calcular()" class="btn btn-primary" class="text-center">Evaluar</button>
+				<button onclick="calcular()" class="btn btn-primary">Evaluar</button>
 			</div>
 			<div class="col-md-3 text-center">
 				<h4 class="text-info">Hoy</h4>
