--- a/index.html
+++ b/index.html
@@ -47,7 +47,18 @@
 				<h4 class="text-info">Podrás dormir</h4>
 	        </div>
 	    </div>
+	   <div class="row">
+            <div class="text-center">
+                        <a href="https://giulianna2043.github.io/ejrcicio7-monkey/."><button type="button" class="btn btn-danger">Siguiente   </button></a> 
+            </div>
+            <div class="text-center">
+                <br>
+                <button type="button" class="btn btn-primary">Visita mi github <a href="https://github.com/Giulianna2043/ejercicio6-dormimos"><img src="img/git.png" alt=""></a></button>
+                        
+            </div>
+        </div>
     </div>
+    
 </body>
 <script src="main.js"></script>
 </html>
