--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="main.css">
-	<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 	<title>¿Dormimos?</title>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
+		
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="text-center">¿Dormimos?</h1>
 				<p>Completa el formulario y te diré si puedes hacerlo</p>
+				
+                <h4>El parametro weekday es true si el dia es un dia de semana, y el parametro vacations es true si estamos de vacaciones. Dormimos si no es un dia de semana si estamos de vacaciones. completa la funciones para que retorne 1 los dias que dormimos, caso contrario retornar 0.</h4>
 				<hr>
 			</div>
 		</div>
@@ -43,8 +46,8 @@
 			</div>
 			<div class="col-md-3 text-center">
 				<h4 class="text-info">Hoy</h4>
-				<div id="salida" style="font-size:50px;" >-</div>
-				<h4 class="text-info">Podrás dormir</h4>
+				<div id="salida" style="font-size:20px;" >-</div>
+				<h4 class="text-info">Podrás dormir en tus vacaciones</h4>
 	        </div>
 	    </div>
 	   <div class="row">
